# proxa-voicechat

./: Cargo.toml  Makefile.toml  rustfmt.toml
apps/proxa-client-cli-app/: Cargo.toml  build.rs
apps/proxa-client-cli-app/src/: main.rs
apps/proxa-controller-headless-app/: Cargo.toml
apps/proxa-controller-headless-app/src/: main.rs
apps/proxa-controller-tray-app/: Cargo.toml
apps/proxa-controller-tray-app/src/: main.rs
apps/proxa-relay-app/: Cargo.toml
apps/proxa-relay-app/src/: main.rs
libs/proxa-client/: Cargo.toml
libs/proxa-client-cpal/: Cargo.toml
libs/proxa-client-cpal/src/: lib.rs
libs/proxa-client/resources-src/sounds/: ProxaVoiceChatSfx.flp
libs/proxa-client/resources/sounds/: Error.opus  PeerJoin.opus  PeerLeave.opus  SpkTest.opus  VcRecStart.opus  VcRecStop.opus
libs/proxa-client/src/: aec3.rs  assets.rs  client.rs  dfn3.rs  encode.rs  error.rs  lib.rs  peer.rs  quic.rs  types.rs
libs/proxa-controller/: Cargo.toml
libs/proxa-core/: Cargo.toml
libs/proxa-protocol/: Cargo.toml
libs/proxa-protocol/src/: lib.rs
libs/proxa-relay-server/: Cargo.toml
libs/proxa-relay-server/src/: lib.rs
models/: readme.md
spec/: commands.md
