[package]
name = "proxa"
version = "0.0.0"
edition = "2024"

[dependencies]
# TODO: switch to mainline cpal when this is merged
cpal = { git = "https://github.com/Decodetalkers/cpal", branch = "pipewire", version = "0.18.0" }
nnnoiseless = "0.5.2"
opus = "0.3.1"
tokio = "1.49.0"
tray-icon = "0.21.3"
