[workspace]
resolver = "2"
members = ["apps/*", "libs/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
authors = ["hexa0"]

[workspace.dependencies]
# audio backend
# this is temp until pipewire support is published on cargo
cpal = { git = "https://github.com/RustAudio/cpal", version = "0.18.0" }
# rnnoise bindings
nnnoiseless = "0.5.2"
# rust port of WebRTC's AEC3
aec3 = "0.1.5"
# DeepFilterNet, do not use this in debug mode or you will have a very bad and laggy time
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet", rev = "v0.5.6", features = [
	"tract",
	"logging",
] }
# runtime for DeepFilterNet
tract-onnx = "0.21"
# tensor operations
ndarray = "0.15"
# i mean this is is a bit obvious it's just the audio codec lol
opus = "0.3.1"
# QUIC networking
quinn = "0.11.9"
# async
tokio = { version = "1.49.0", features = ["full"] }
# also obvious
tray-icon = "0.21.3"
# logging
log = "0.4"
env_logger = "0.11.9"
# for embedding resources
rust-embed = "8.6.0"


# for final publishing: cargo build --profile dist
# for dev we actually use release because the AI audio processing will run like trash in debug
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
codegen-units = 1
opt-level = 3 # using s or z here might affect performance which we do not want to make worse because we need it