[package]
name = "proxa-client-cli-app"
version.workspace = true
edition.workspace = true

[dependencies]
proxa-client = { path = "../../libs/proxa-client" }
proxa-client-cpal = { path = "../../libs/proxa-client-cpal" }
tokio = { workspace = true, features = ["full"] }
anyhow = "1"
crossterm = "0.28.1"
opus.workspace = true
clap = { version = "4.5.60", features = ["derive"] }
rand = { version = "0.10.0" }
ratatui = "0.29.0"
parking_lot = "0.12"
env_logger.workspace = true
log.workspace = true
