[package]
name = "proxa-relay-app"
version.workspace = true
edition.workspace = true

[dependencies]
proxa-protocol = { path = "../../libs/proxa-protocol" }
quinn.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow = "1"
dashmap = "6.0"
rcgen = "=0.14.7"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
bincode = "1.3"
env_logger.workspace = true
log.workspace = true
clap = { version = "4.5.60", features = ["derive"] }
