[package]
name = "proxa-relay-app"
version.workspace = true
edition.workspace = true

[dependencies]
proxa-relay-server = { path = "../../libs/proxa-relay-server" }
tokio = { workspace = true, features = ["full"] }
anyhow = "1"
env_logger.workspace = true
clap = { version = "4.5.60", features = ["derive"] }
