[package]
name = "proxa-client-cpal"
description = "cpal audio backend implementation for proxa"
version.workspace = true
edition.workspace = true

[dependencies]
proxa-client = { path = "../proxa-client" }
anyhow = "1"
opus.workspace = true
parking_lot = "0.12"
log.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
cpal = { workspace = true, features = ["pipewire"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = { workspace = true }
