[package]
name = "proxa-relay-server"
description = "host a voice chat relay for proxa"
version.workspace = true
edition.workspace = true

[dependencies]
proxa-protocol = { path = "../proxa-protocol" }
quinn.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow = "1"
dashmap = "6.0"
rcgen = "=0.14.7"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
bincode = "1.3"
log.workspace = true
rustls-pemfile = "2.2.0"
